# vibesafe

./: .gitignore  README.md  REQ-000C-compliance-assessment.md  about.md  codecov.yml  combine_tenets.py  install-whats-next.sh  philosophy.md  pyproject.toml  test_support.py  vibesafe-notion-summary.md  vibesafe-update
.cursor/rules/: backlog.mdc  cip.mdc  requirements_rule.md  testrule.mdc  vibesafe_general.mdc  vibesafe_template_editing.mdc  vibesafe_update.mdc  whats_next.mdc
.github/workflows/: docs.yml  installation-test.yml  python-tests.yml  test-coverage.yml  test.yml
.vibesafe/: documentation.yml
ai-requirements/: DEPRECATED.md  README.md  ai-requirements-framework.md  integration-requirements.md  vibesafe-core.md
backlog/: README.md  __init__.py  index.md  task_template.md  update_index.py
backlog/core/: __init__.py
cip/: README.md  cip0001.md  cip0002.md  cip0003.md  cip0004.md  cip0005.md  cip0006.md  cip0007.md  cip0008.md  cip0009.md  cip000A.md  cip000B.md  cip000C.md  cip000D.md  cip000E.md  cip000F.md  cip0010.md  cip0011.md  cip0012-prompt-composition-strategy.md  cip0012.md  cip0013-compression.md  cip0013.md  cip0014.md  cip0015.md  cip0016.md  cip00FF.md  cip_template.md
docs/: compression-guide.md  test_build.py  vibesafe_update_script.md  whats_next_script.md
patterns/: breadcrumbs.md
requirements/: README.md  REQ-001_yaml-standardization.md  REQ-002_simplify-requirements-framework.md  REQ-003_patterns-as-guidance.md  REQ-004_tenets-sustainability.md  REQ-005_project-summary-tool.md  REQ-006_process-conformance-validation.md  REQ-007_automatic-system-updates.md  req0001_yaml-standardization.md  req0002_simplify-requirements-framework.md  req0003_patterns-as-guidance.md  req0004_tenets-sustainability.md  req0005_project-summary-tool.md  req0006_process-conformance-validation.md  req0007_automatic-system-updates.md  req0008_clear-framework-boundaries.md  req0009_documentation-quality-standards.md  req000A_minimal-version-control-footprint.md  req000B_ai-access-to-project-tenets.md  req000C_ai-assistant-framework-independence.md  req000D_cips-as-self-contained-design-documents.md  req000E_documentation-synchronization.md  req000F_documentation-structure-specification.md  req0010_human-authorship-attribution.md
scripts/: add_backlog_frontmatter.py  add_cip_frontmatter.py  add_frontmatter.py  debug-templates.sh  install-minimal.sh  run-python-tests.sh  run-tests-with-coverage.sh  validate_vibesafe_structure.py  vibesafe_update.py  whats_next.py
templates/: compression_checklist.md  quarterly_compression_review_template.md
tenets/: README.md  combine_tenets.py  tenet_template.md  vibesafe-tenets.md  vibesafe-tenets.yaml
tests/: README.md  test_template_runtime_sync.py  test_update_index.py  test_validate_vibesafe_structure.py  test_vibesafe_update.py  test_whats_next.py
(+119 files in other folders)
