[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vibesafe"
version = "0.1.0"
description = "Standardized project management practices for consistent development"
readme = "README.md"
authors = ["Neil Lawrence <example@example.com>"]
license = "MIT"
packages = [{include = "backlog"}]

[tool.poetry.dependencies]
python = ">=3.8"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
black = ">=23.0"
mypy = ">=1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true 