[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vibesafe"
version = "0.1.0"
description = "Standardized project management practices for consistent development"
authors = ["Neil Lawrence <example@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "scripts"},
    {include = "backlog"}
]

[tool.poetry.dependencies]
python = ">=3.10"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^25.0.0"
mypy = "^1.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
sphinx-rtd-theme = ">=1.0"
myst-parser = ">=2.0"
sphinx-copybutton = ">=0.5"
sphinx-autodoc-typehints = ">=1.25"
linkify-it-py = ">=2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.sphinx]
version = "7.0"
release = "0.1.0" 